# Random-Tree-Project

./: CMakeLists.txt  LICENSE  README.md
formatted-data/: actressDataSet.csv
src/: main.cpp
src/data-structure/: node.cpp  node.hpp  tree.cpp  tree.hpp
